--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -68,7 +68,12 @@ body {
 
             >li {
                 padding: 5px;
+
+            >img{
+                width: 25px;
             }
+            }
+
 
         }
     }
