--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -68,13 +68,10 @@ body {
 
             >li {
                 padding: 5px;
-
-            >img{
-                width: 25px;
+                >a>img{
+                    width:25px;
+                }
             }
-            }
-
-
         }
     }
 }
